# AutoPromptRunner

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  PROJECT.md  README.md  RELEASE_NOTES.md  autoprompt.example.toml  pyproject.toml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AppTargetPanel.tsx  ApprovalPanel.tsx  ArtifactList.tsx  ArtifactViewer.tsx  AuthPanel.tsx  CancelPanel.tsx  ChangedFilesPanel.tsx  CheckpointPanel.tsx  CommitPanel.tsx  ComparePanel.tsx  Dashboard.tsx  DiffStatPanel.tsx  ExportImportPanel.tsx  HealthPanel.tsx  InjectionPanel.tsx  Layout.tsx  LiveLogPanel.tsx  LockPanel.tsx  ProjectForm.tsx  ProjectList.tsx  PromptChainPanel.tsx  PromptQueuePanel.tsx  ProviderForm.tsx  ProviderHealthPanel.tsx  ProviderList.tsx  QueuePanel.tsx  QueuedPromptForm.tsx  QueuedPromptList.tsx  RecoveryPanel.tsx  RunDetail.tsx  RunForm.tsx  RunList.tsx  SafetyPanel.tsx  SearchPanel.tsx  Sidebar.tsx  StatusBadge.tsx  StepList.tsx  SystemPanel.tsx  TargetVerificationPanel.tsx  TemplateForm.tsx  (+3 more)
scripts/: build_frontend.sh  check_all.ps1  check_all.sh  dev_api.ps1  dev_api.sh  dev_frontend.ps1  dev_frontend.sh  dev_worker.ps1  dev_worker.sh  doctor.ps1  doctor.sh  install_backend.sh  install_frontend.sh  package_release.sh  setup_local.sh
src/autoprompt_runner/: __init__.py  app_injection.py  app_targets.py  approvals.py  artifacts.py  auth.py  cancel.py  chains.py  checkpoints.py  cli.py  commits.py  compare.py  config.py  events.py  export_import.py  git_utils.py  locks.py  models.py  paths.py  processes.py  projects.py  prompt_queue.py  providers.py  queue.py  reconcile.py  recovery.py  safety.py  search.py  settings.py  state.py  storage.py  templates.py  window_detection.py  worker.py  worktrees.py
src/autoprompt_runner/api/: app.py  (+3 more)
tests/: test_api_app_targets.py  test_api_chains.py  test_api_checkpoints.py  test_api_commits.py  test_api_compare.py  test_api_events.py  test_api_export_import.py  test_api_health.py  test_api_projects.py  test_api_prompt_queue.py  test_api_providers.py  test_api_recovery.py  test_api_runs.py  test_api_search.py  test_api_system.py  test_api_templates.py  test_api_worktrees.py  test_app_injection.py  test_app_targets.py  test_artifacts.py  test_auth.py  test_cancel.py  test_chains.py  test_checkpoints.py  test_claude_code_runner.py  test_cli.py  test_codex_runner.py  test_commits.py  test_compare.py  test_config.py  test_e2e_api_flow.py  test_e2e_cli_flow.py  test_events.py  test_export_import.py  test_git_utils.py  test_locks.py  test_packaging.py  test_paths.py  test_processes.py  test_projects.py  (+15 more)
(+26 files in other folders)
