[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoprompt-runner"
dynamic = ["version"]
description = "Local-first prompt orchestration tool that drives coding-agent CLIs through a bounded, approval-gated prompt loop."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cli", "prompt", "orchestration", "coding-agent", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

# The CLI core has no third-party runtime dependencies (standard library only). The
# optional HTTP API requires the "api" extra.
dependencies = []

[project.optional-dependencies]
# HTTP API backend (FastAPI). Install with: pip install -e ".[api]"
api = ["fastapi>=0.110", "uvicorn>=0.29"]
# Development / test extra (adds the API deps plus the test client and runner).
dev = ["pytest>=7.0", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
autoprompt-runner = "autoprompt_runner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "autoprompt_runner.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
